# UNC-SolHacks-2026

./: .gitignore  DEMO_SCRIPT.md  LICENSE  QUICKSTART.md  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: 🎓-certification-voucher-submission.md
.specify/: plan.md  spec.md
.specify/memory/: constitution.md
.specify/tasks/: grade_tracker_tasks.md
examples/01_autocomplete/: README.md  autocomplete_exercise.py
examples/02_writing_tests/: README.md  calculator.py  test_calculator.py
examples/03_refactoring/: README.md  refactor_me.py
examples/04_documentation/: README.md  document_me.py
examples/05_debugging/: README.md  buggy_code.py
examples/06_build_api/: README.md  app.py  models.py  test_app.py
prompts/: copilot_prompts.md
starter_project/: README.md  main.py  test_main.py  utils.py
