[project]
name = "unc-solhacks-2026"
version = "1.0.0"
description = "GitHub Copilot Learning Lab — UNC SolHacks 2026"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "pytest>=8.3",
    "httpx>=0.28",
]

[tool.pytest.ini_options]
testpaths = ["examples", "starter_project"]
pythonpath = ["."]
